# ChangeLog for app-admin/eselect-notify-send
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-notify-send/ChangeLog,v 1.4 2013/04/16 20:45:33 ago Exp $

  16 Apr 2013; Agostino Sarubbo <ago@gentoo.org> eselect-notify-send-0.1.ebuild:
  Stable for ppc64, wrt bug #466004

  15 Apr 2013; Agostino Sarubbo <ago@gentoo.org> eselect-notify-send-0.1.ebuild:
  Stable for x86, wrt bug #466004

  15 Apr 2013; Agostino Sarubbo <ago@gentoo.org> eselect-notify-send-0.1.ebuild:
  Stable for amd64, wrt bug #466004

*eselect-notify-send-0.1 (19 Mar 2013)

  19 Mar 2013; Samuli Suominen <ssuominen@gentoo.org>
  +files/notify-send.eselect-0.1, +eselect-notify-send-0.1.ebuild:
  Initial commit wrt #379941 by Michał Górny