@@ -1,0 +1,14 @@
+DEFINED_PHASES=install postinst preinst prerm setup
+DEPEND=|| ( virtual/httpd-cgi virtual/httpd-fastcgi ) >=app-admin/webapp-config-1.50.15
+DESCRIPTION=The MediaWiki wiki web application (as used on wikipedia.org)
+EAPI=5
+HOMEPAGE=http://www.mediawiki.org
+IUSE=imagemagick mysql postgres sqlite vhosts
+KEYWORDS=~alpha ~amd64 ~ppc ~x86
+LICENSE=GPL-2
+RDEPEND=>=dev-lang/php-5.3[mysql?,postgres?,session,xml,xmlreader] imagemagick? ( || ( media-gfx/imagemagick media-gfx/graphicsmagick[imagemagick] ) ) !imagemagick? ( dev-lang/php[gd] ) sqlite? ( dev-db/sqlite:3[fts3(+)] >=dev-lang/php-5.3[pdo] || ( dev-lang/php[sqlite] dev-lang/php[sqlite3] ) ) virtual/httpd-php >=app-admin/webapp-config-1.50.15
+RESTRICT=test
+SLOT=1.19.5
+SRC_URI=http://download.wikimedia.org/mediawiki/1.19/mediawiki-1.19.5.tar.gz
+_eclasses_=eutils	36e6377b0e31856b6d62af831661c4f3	multilib	ded93e450747134a079e647d888aa80b	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4	webapp	25b9b1696f5e698711f47d45c3d45e3e
+_md5_=e5646a3328929c9a42084983dcca7493
