@@ -4,19 +4,23 @@ Hash: SHA256
 AUX postinstall-1.18-en.txt 2611 SHA256 8388d74e84d63c40cbc697e25639be5f07108ecc13497346fccf9d89ab0484eb SHA512 2b6a0e00160c15466bf70189499816d18a5ea06f040ed79f2361842be93a584ea19033170dc59c1d78c590da85223a61b8d04730084e60bc7906648f2532578b WHIRLPOOL 254b014ac9a7cf431958ade7827afadbf7e48ec255e1ea39e7ac3fa091f7d321376b760dad39d0be3af3a6cb342aaeac9d4e2329816bf3c6b3e4e55e1ac05d4b
 AUX postupgrade-1.16-en.txt 1514 SHA256 5d7aedb456fbff83adf0335ca5e1c99062e694e178bc93d749615ff63dc883f4 SHA512 58d11cdf8daaa2ee62ca64dfeddad3ef2d10feac5b93b51f96e5802dd2915c3d969b8e99d059e79a9b62386ae70a7690db3c4e4d248501e839769bc7f24d2dd5 WHIRLPOOL f17f927bfedfdc502c752276c0876bebe771918242be98de32d5fc51003a054132f4f6b4a16caeca293c1ebb44c12bc322eee5efcefda228ea97136b00c6e1ee
 DIST mediawiki-1.19.4.tar.gz 18536768 SHA256 8dab7fe082aeb1d363e69db7e0ad1e234b01955f92606540a4132596ea47e776 SHA512 10263278d917bfb4de06cdc71edfa6c71a9f976596a50a0ab1d6b68a09dd6f5ecb3ecd1ce10c269ac0929bb0d3345d976ce41d8d9bec0496cfbf3e051b0e5cfd WHIRLPOOL 75f7dfbe080af47d3fe8544dd8fecfc88f7aed40b34e1bae2142be4b8046785325f8531136a14c70fb590179266ce95ddc559322a90308fb92b202c7d6e2a859
+DIST mediawiki-1.19.5.tar.gz 18535374 SHA256 f37788007d77553742b0ceada996cf71b2d4ae7d07b44cdd073f51a9c98cdffb SHA512 bbf10e798ca79c19224b9169b5930c717ef256ea97db6cdf80c717f6c8df2743c2a9cdf04a5d9947c7446a7665b11644bf3545917baf5376ee6c743995b41a45 WHIRLPOOL c3ae96a0d9d1b56eaec966e6dcf0737e1bc6e1e7eae14ef82c8e9847fbef76a4f089a0c146705eb10405940de368f3db6e4f058d2f2ba0f4b07ee0af0525640a
 DIST mediawiki-1.20.3.tar.gz 18411865 SHA256 8a5c4e4922c6c654741af9203b24a6e4489e4ce0c05ed0354844d14e0a66d210 SHA512 da379e0daaef90d87b2615ccc302ecba25f78a402c504c23d5fb67bc69e108f418b105a3a14622ea8c88ccc08fd3d5065bcd8b20e8676441abe60b089c5aadac WHIRLPOOL 23a3c7e945a7cd60ff9177d3c1236177a6cddb937c544ff5708f4952b0e24eb4d95061ff0397bfd2a09303f1c10e1d7467a0074e1a79705989f6fcd5a0c2aa16
+DIST mediawiki-1.20.4.tar.gz 18411739 SHA256 0d695d3fc0905b94a81dbecb25210ee3ff7d3b43359d20f262541ec4a6849cba SHA512 563ebcc2e40ed55b3ccb3229bacd7b390417970b80888d8d49289fe29941aca8450b4b657d2e2aef4f817ca0c4c5d0a9f52a5ca6f2fbed0df00da66136d0fb38 WHIRLPOOL b265a865ee68631bf215ba475850dd27e3ac6bea13dfe62f2374b418d50ab33048b5c98908d0a7c97946548bab3940be9deb4b63c1615ed1852229347c4cfee2
 EBUILD mediawiki-1.19.4.ebuild 2591 SHA256 a825a3aee3260000511afb13a94c3be811d4578f0c1857c26dd722172ad23360 SHA512 7b4b51dc53d0e7d4576c967eda549362bbf75cc563a3df2e0e63f18b7e3d6be6ae07eae327b1db3e6f56e7f3889d18f4dd31a6a444539f2ccd6a51903bd6ad35 WHIRLPOOL e2dded7fdd1d4eddac16bf3f1d57b69e5493ad232bc7fe353d5fec1392f59965d85deebf7715ba17b7de550302c7b74198351de2bb3a8ae56e090e5616c33bf6
+EBUILD mediawiki-1.19.5.ebuild 2594 SHA256 050a28a67445d38ebfa5963c00f5fbd8c7639ce771c9c693bbcc40b13b0e00b6 SHA512 f54ec064e105f68cf861e8f054ea1a577573ba5aec6b8e57dcf29d50a7e4aebe5b86057cbdc0932d622f41c881006f8457ede84dda2b33bb40e0017593d47322 WHIRLPOOL 9587c7390e6cefc7600695e8b60425713e66b67b4568c70d86a413c56bb0a4181a97eb03d6340b3da107d3947f09aa251d1aba6fa4d49dcb49148198539b4742
 EBUILD mediawiki-1.20.3.ebuild 2595 SHA256 581b8b3e78ccfff28e75304722f359c9cdfba2fb6fee969edd80638f84cd415c SHA512 cf987d9fa023a826b0febfb04506f9d45badbdc277fddf68dcccfece423d5abd5390d882369b8120e0dd4045f4c66a557b1c9cbb43bdadd3e1d043185d5cf29c WHIRLPOOL 805a7cc37284c10426dcc9adf8b88bb2dfc672f1d3a68fa321825c3883400a9a38e8a734bab0a130fc9b7e0076511069ece591f33ff9e3aae0bbf161bf678483
-MISC ChangeLog 35722 SHA256 a1c1e47c4319183417bc4c0ee9b425c223420ec77912c765cf84a94d489cd42d SHA512 e13d3135ae2c6a58384713f6c9f50ce61b6c8975901d0b319cc846e058806a7a0f93010c0e52ab1d296d04d8eea92911f66eae19149a0e9832ade8f6c25c956b WHIRLPOOL 839db5cd7944dfb9e7e120b11e253651d391ccb180806dcd7356ca60b08fb77681df852a16987aad13d431bec82f14c7c7aaf5a1e28c6655fb0c33ce82913957
+EBUILD mediawiki-1.20.4.ebuild 2598 SHA256 f0fe8d7680c0b4d247e4aa9c521e7813126ef96894244f3ef7b98abc494a8632 SHA512 62fe01e0df6be781e01f3d6163d1889deb7a03efac7cb21cfa3624c75fbadad868028e6b5719065d1904d99e5cfb841733256eff98776aff7e54324ff9267fc1 WHIRLPOOL 2991c6438dfe9b10a945c3b72b67eca2329c9bc63b5c1f5e898fd0df9f2d8882202fa676f08a5e082dc3142c5a3dcb00d4490969e8becac861256a70544c9b81
+MISC ChangeLog 35923 SHA256 a9df10b9061fd986f684f2e14b2ea42be2d24fab1c58b1b24620c05ced84f979 SHA512 96debe3c26e44688c1a90c5452115f3988bcb031b5b8d10c8a2031580276787b8ed5a6e3ab7ac60fae33496b61fc8c5819ce6d3ce999fecc3a1d3080a91ce3e5 WHIRLPOOL 3165ea84e7bf3d4e5cd6297d40714b8b660bc755e2c77e19e7b820870c23db13dba12b582f76ab6ef4a14de57ca15ec1af088f65be2fc4e9d64809871cba9992
 MISC metadata.xml 161 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4 SHA512 da8733f12ac4bebcfa485138fd9880683c1196efc0312a588ffce412ed14c1dd831e005129b6598d027af44d381fceb844453a433d0c982348e21f2d9c49f52e WHIRLPOOL 2b56ebef4f0870596c32c35c96e6dfbc911f6a3d8fe0e8c463df76dfa73dde112948c814b9a9ee996b7d71a85e4a723033ee3b92f4cde0f31d0770404d7dba61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRSTIIAAoJEEqz6FtPBkyj4hAIAK0aRMnMClbinMkaOaOX6jYo
-1HCZm1rhKpA+CFWJCn83H0qVBR+EBdbe7affBpOQQLHsbQUoiCwf/MtFKrqGF+vH
-OS7Tme5eBrk8eQAbUnvBzsZhYAnQWfzKv7UMGsCcB1pvlQvFEGI2qtiql+3SloGk
-EUlKqNDjUiUppOyeSpiwBXZWKHZxUjyN4VBUiE2AzkC7JsZg43w+DoStCFLe0ZFi
-5MFGOcWn/I8H9SZyG3oBHtGUUa46OjFMMqQBG66Ga2jbCUbfTgyFFb3eNDBzeMBZ
-s56iKPeS76bZL9upz0epenWaX/ZAii5mE7eesWD/OHLFCp2TpyyJttZezu6cKsE=
-=8njO
+iQEcBAEBCAAGBQJRbenmAAoJEEqz6FtPBkyjAPMIAJtpQmF3qjD7BbRTvbK8qvMa
+ewV3oSGxjx6Y4w/5wurEjEmT+wbDSQ6+2rbF9dZwtkmcyfqMqYkdeoAXDFRdrw24
+UKm76QyyOsM4SMuRTKPyEKynz+I78kNLAsOPo5kVF97fKRtUCgF5cWzcfYPEI58o
+oTC+grz5OdI8dBhbUu0qS7XpvRUgMC4tnhRvQkEYY4MVwMGjE9bj4nC5Alpe+ICF
+WxfZ+vwkbAtJ4UWkZuY3oHS0MZ6/qcGSX6bx/wgVI9FUdyLK8wcXsGoz7CIIf04o
+oORDDlS7KDwKYKBSWjUpVRtKf8NMWDKq1TTEDV4WhvDTcEYrOGGgb66eFcCVMhI=
+=DLoI
 -----END PGP SIGNATURE-----
