@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/eselect-notify-send
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-notify-send/ChangeLog,v 1.4 2013/04/16 20:45:33 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-notify-send/ChangeLog,v 1.5 2013/04/16 21:05:44 ago Exp $
+
+  16 Apr 2013; Agostino Sarubbo <ago@gentoo.org> eselect-notify-send-0.1.ebuild:
+  Stable for arm, wrt bug #466004
 
   16 Apr 2013; Agostino Sarubbo <ago@gentoo.org> eselect-notify-send-0.1.ebuild:
   Stable for ppc64, wrt bug #466004
